# flit_pytest_circleci_template

./: pyproject.toml  readme.md
.circleci/: config.yml
