[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flit_pytest_circleci_template"
authors = [{name = "Doug Ransom", email = "doug@ransom.vip"}]
version="1.0"
description="todo description"
requires-python = ">2.7,>=3.9"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.0",
        "Topic :: Software Development :: Libraries :: Python Modules"
        ]

[project.urls]
Home = "https://github.com/dictation-toolbox/flit_pytest_circleci_template/"

[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "

testpaths= [
    "test",
]
